--- a/sass/theme/layout/_footer.scss
+++ b/sass/theme/layout/_footer.scss
@@ -21,7 +21,7 @@ footer.site-footer {
 
 	.footer-widget {
 		margin-bottom: 2rem;
-		color: #86898b;
+		color: #f1f1f1;
 		font-size: .9rem;
 		font-weight: 500;
 
@@ -30,7 +30,7 @@ footer.site-footer {
 		}
 
 		a {
-			color: #A95C5C;
+			color: #ff5f5f;
 
 			&:hover {
 				color: $secondary;
